--- a/_data/solutions.yml
+++ b/_data/solutions.yml
@@ -1,8 +1,8 @@
 - name: GearFit
   description: |
-    A platform that creates a feedback loop between gear users and acquirers, enabling data-driven decisions about gear problems and priorities.
+    A platform that creates a feedback loop between gear users and acquirers, enabling data-driven decisions about gear problems and priorities.
   url: /work/solutions/gearfit/
-- name: Service Design Accelerator
+- name: Public Service Design
   description: |
     A strategic, holistic approach to delivering optimal user experiences within a complex ecosystem of policies, operations, people, and technology.
-  url: /work/solutions/public-service-design
+  url: /work/solutions/public-service-design/
