--- a/_data/team.yml
+++ b/_data/team.yml
@@ -3301,5 +3301,27 @@
       link: https://linkedin.com/in/ian-johnson-hancock
       link_description: Ian's LinkedIn Account
       fa_icon_name: linkedin
-      
+- name: emily-alter
+  fname: Emily
+  lname: Alter
+  full_name: Emily Alter
+  short_name: E. Alter
+  profile_path: /company/about/#emily-alter
+  image: /img/people/emily-alter.png
+  image_description: Photo of Emily Alter
+  position: Senior User Researcher 
+  bio: >
+    Emily's a user researcher with a decade of experience using research to convince product teams to make more user-friendly products. 
+    She has conducted user research for Cameo, Litmus, Facebook Messenger, Wells Fargo, and Chase. 
+    Emily lives in California.
+  active: true
+  socials:
+    - name: LinkedIn
+      link: https://www.linkedin.com/in/emilyalter1/
+      link_description: Emily's LinkedIn Account
+      fa_icon_name: linkedin
+    - name: Personal Website
+      link: https://emilyralter.com/
+      link_description: Emily's Personal Website
+      fa_icon_name: home
   
