--- a/_data/team.yml
+++ b/_data/team.yml
@@ -3269,7 +3269,7 @@
   full_name: Kathryn Mullins
   short_name: K. Mullins
   profile_path: /company/about/#kathryn-mullins
-  image: /img/people/kathryn-mullins.jpeg
+  image: /img/people/kathryn-mullins.jpg
   image_description: Photo of Kathryn Mullins
   position: VP of Growth 
   bio: >
