--- a/_data/team.yml
+++ b/_data/team.yml
@@ -3339,7 +3339,7 @@
   position: Senior Software Engineer
   bio: >
     Boban's a software engineer who's always excited to work on new and challenging problems. 
-    He has a background in building scalable APIs and DevOps, and is expanding his front-end knowledge. 
+    He has experience with building scalable APIs and DevOps, and is expanding his front-end expertise. 
     Boban lives in Michigan.
   active: true
   socials:
