--- a/_data/team.yml
+++ b/_data/team.yml
@@ -3290,7 +3290,7 @@
   profile_path: /company/about/#ian-hancock
   image: /img/people/ian-hancock.jpg
   image_description: Photo of Ian Hancock
-  position: Software Engineer Apprentice 
+  position: Software Engineer Intern
   bio: >
     Ian’s a software engineer who loves understanding problems and developing solutions that make an impact on people. 
     He's also an Air Force veteran who previously worked for BESPIN as a software engineer mainly building web applications. 
