--- a/_data/team.yml
+++ b/_data/team.yml
@@ -3411,7 +3411,7 @@
   full_name: Arin Kulshi
   short_name: A. Kulshi
   profile_path: /company/about/#arin-kulshi
-  image: /img/people/arin-kulshi.jpg
+  image: /img/people/arindam-kulshi.jpg
   image_description: Photo of Arin Kulshi
   position: Staf Data Engineer
   bio: >
