--- a/_data/team.yml
+++ b/_data/team.yml
@@ -2210,7 +2210,7 @@
   profile_path: /company/about/#taylor-graue
   image: /img/people/taylor-graue.png
   image_description: Photo of Taylor Graue
-  position: Chief Operating Officer
+  position: VP of Defense Services
   bio: >
     Taylor’s an Air Force Veteran who's passionate about delivering value and bringing highly effective solutions to the DoD. 
     She most recently worked as a product manager and designer at Kessel Run. She specializes in strategy, human-centered design (HCD), and building relationships. 
