--- a/_data/team.yml
+++ b/_data/team.yml
@@ -2210,7 +2210,7 @@
   profile_path: /company/about/#taylor-graue
   image: /img/people/taylor-graue.png
   image_description: Photo of Taylor Graue
-  position: VP of Defense Services
+  position: Interim VP of Defense Services
   bio: >
     Taylor’s an Air Force Veteran who's passionate about delivering value and bringing highly effective solutions to the DoD. 
     She most recently worked as a product manager and designer at Kessel Run. She specializes in strategy, human-centered design (HCD), and building relationships. 
@@ -3365,7 +3365,7 @@
   profile_path: /company/about/#mike-judd
   image: /img/people/mike-judd.png
   image_description: Photo of Mike Judd
-  position: Chief Operating Officer
+  position: Chief Operating Officer, Human Services
   bio: >
     Mike's a technologist, community builder, and bureaucracy hacker with over 10 years of experience at the CDC. 
     He's passionate about improving the ways that government interacts with and provides value to the American people. 
