--- a/_data/team.yml
+++ b/_data/team.yml
@@ -2213,7 +2213,7 @@
   position: Interim VP of Defense Services
   bio: >
     Taylor’s an Air Force Veteran who's passionate about delivering value and bringing highly effective solutions to the DoD. 
-    She most recently worked as a product manager and designer at Kessel Run. She specializes in strategy, human-centered design (HCD), and building relationships. 
+    She most recently worked as a product manager and designer at Kessel Run. She specializes in strategy, human-centered design, and building relationships. 
     Taylor lives in Texas.
   active: true
   order: 530
