--- a/_data/team.yml
+++ b/_data/team.yml
@@ -3413,7 +3413,7 @@
   profile_path: /company/about/#arin-kulshi
   image: /img/people/arindam-kulshi.jpg
   image_description: Photo of Arin Kulshi
-  position: Staf Data Engineer
+  position: Staff Data Engineer
   bio: >
     Arin's a data engineer who specializes in building applications focused on health technology. 
     He has a background in improving healthcare interoperability and addressing diverse data needs. 
