--- a/_data/team.yml
+++ b/_data/team.yml
@@ -3541,9 +3541,9 @@
   profile_path: /company/about/#alex-hayward
   image: /img/people/alex-hayward.jpg
   image_description: Photo of Alex Hayward
-  position: Data Scientist II
+  position: Data Scientist
   bio: >
-    Alex is data scientist who's passionate about using data to create more equitable public outcomes. 
+    Alex is a data scientist who's passionate about using data to create more equitable public outcomes. 
     Previously, they used machine learning to help public water systems identify and remove lead pipes at the National Institutes of Health. 
     Alex lives in California. 
   active: true
