--- a/_data/team.yml
+++ b/_data/team.yml
@@ -3373,7 +3373,7 @@
   bio: >
     Mike's a technologist, community builder, and bureaucracy hacker with over 10 years of experience at the CDC. 
     He's passionate about improving the ways that government interacts with and provides value to the American people. 
-    Mike lives in Atlanta.
+    Mike lives in Georgia.
   active: true
   order: 10
   socials:
