--- a/_data/team.yml
+++ b/_data/team.yml
@@ -2240,7 +2240,7 @@
   image_description: Photo of Taylor Graue
   position: Interim VP of Defense Services
   bio: >
-    Taylor’s an Air Force Veteran who's passionate about delivering value and bringing highly effective solutions to the DoD. 
+    Taylor’s an Air Force Veteran who's passionate about delivering value and bringing highly effective solutions to the Department of Defense. 
     She most recently worked as a product manager and designer at Kessel Run. 
     She specializes in strategy, human-centered design, and building relationships. 
     Taylor lives in Texas.
@@ -3720,7 +3720,7 @@
   short_name: M. Crawford
   profile_path: /company/about/#mary-crawford
   image: /img/people/mary-crawford.png
-  image_description: Photo of Mary Crawford
+  image_description: Illustration of Mary Crawford
   position: Senior DevOps Engineer
   bio: >
     Mary's a DevOps engineer who enjoys creating, monitoring, containerizing, and observing various technical processes. 
@@ -3780,7 +3780,7 @@
   short_name: R. Mitchell
   profile_path: /company/about/#rob-mitchell
   image: /img/people/rob-mitchell.png
-  image_description: Photo of Rob Mitchell
+  image_description: Illustration of Rob Mitchell
   position: Senior Data Engineer
   bio: >
    Rob's a data engineer with experience in the education and civic tech space. 
@@ -3800,7 +3800,7 @@
   short_name: J. Kaneria
   profile_path: /company/about/#janki-kaneria
   image: /img/people/janki-kaneria.png
-  image_description: Photo of Janki Kaneria
+  image_description: Illustration of Janki Kaneria
   position: Staff Product Manager
   bio: >
    Janki's a product manager with a passion for modernizing software to improve people's access to health services. 
