--- a/_data/team.yml
+++ b/_data/team.yml
@@ -2428,7 +2428,7 @@
   image_description: Photo of Sarah George Hager
   position: Senior Software Engineer
   bio: >
-    George’s an engineer who enjoys building software that makes life easier, more equitable, and delightful. 
+    George's an engineer who enjoys building software that makes life easier, more equitable, and delightful. 
     She specializes in full-stack software engineering and test-driven development, and loves developing best practices on engineering teams. 
     George previously worked with the U.S. Air Force's Kessel Run program. 
     She lives in Massachusetts.
@@ -3687,7 +3687,7 @@
     He specializes in human-centered design, including user experience research and usability testing.
     Miringu lives in California. 
   active: true
-   order: 1310
+  order: 1310
   socials:
     - name: LinkedIn
       link: https://www.linkedin.com/in/miringu-kiarie-546311ba/
